--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -41,30 +41,16 @@
         <!-- モーダル内コンテンツ -->
           <ul>
               <li>BooksPassageというオリジナルアプリです。</li>
-              <li>このアプリは、本を好きな人が読んだ本をまとめて感想を共有し、次に読む本を探すというアプリです。</li>
-              <li>男女年齢問わず、本が好きな人。感想を共有したいけど身近に共有できる人がいない人、恥ずかしい人。いつも同じ作家の本ばかりで違う作家の本を探している人。そんな人たちに向けてこのアプリを作りました。</li>
-              <li></li>
-              <li>搭載されている機能は</li>
-              <li>・ユーザー管理機能・感想投稿、編集、削除機能・コメント投稿、削除機能</li>
-              <li>・投稿一覧、詳細表示機能・ユーザー詳細表示、編集機能</li>
-              <li>・フォロー機能・いいね(しおり)機能・アプリ内検索機能・ジャンル別検索機能</li>
-              <li>・Amazon検索機能・ネタバレ防止機能・Basic認証</li>
-              <li>などがあります。また、S3の導入もしています。</li>
-              <li></li>
-              <li>投稿機能で本をまとめ、コメント機能で感想を共有、いいね機能で興味がある本をリストアップ、アプリ内検索でさらに本を探し、Amazon検索機能から本の購入。この流れの繰り返しを想定しています。</li>
-              <li></li>
               <li>制作期間は9日程度(一日平均作業時間は約10時間)</li>
-              <li></li>
               <%= link_to 'http://books-passage.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'bsss.jpeg', size: '288x158', class: "ss"  %>
+                <li>http://books-passage.herokuapp.com/</li>
               <% end %>
-              <li>http://books-passage.herokuapp.com/</li>
               <li>認証コード</li>
-              <li>ichiro</li>
-              <li>5151</li>
-              <li></li>
-              <li>GitHubUrl :https://github.com/maki0sato/books-passage</li>
-              <li>[言語]Ruby, css, JavaScript</li>
+              <li>ID：ichiro</li>
+              <li>PASS：5151</li>
+              <li>README：<%= link_to  "https://github.com/maki0sato/books-passage", "https://github.com/maki0sato/books-passage" %></li>
+              <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
          </ul>
       </div>
     </div>
