RREADMEを別タブで開くように修正

--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -23,7 +23,6 @@
               <li>完全未経験でも歓迎するという求人でしたが、やるなら少しは学んでからにしようとテックキャンプに入学しました。</li>
               <li>私は座って作業することに慣れることから始まったので、正直大変でした。でも少しずつプログラミングを楽しむことができるようになってきました。初めて扱う技術がうまくいったり、エラー解決ができた時は、今までに無い快感を感じるようになりました。</li>
               <li>まだまだ、使用できる言語は少ないですが、これからどんどん学んでいきます。</li>
-
          </ul>
       </div>
     </div>
@@ -49,7 +48,7 @@
               <li>認証コード</li>
               <li>ID：ichiro</li>
               <li>PASS：5151</li>
-              <li>README：<%= link_to  "https://github.com/maki0sato/books-passage", "https://github.com/maki0sato/books-passage" %></li>
+              <li>README：<%= link_to  "https://github.com/maki0sato/books-passage", "https://github.com/maki0sato/books-passage", target: :_blank, rel: "noopener noreferrer" %></li>
               <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
          </ul>
       </div>
