--- a/app/assets/stylesheets/skill.css
+++ b/app/assets/stylesheets/skill.css
@@ -11,11 +11,11 @@
   display: flex;
 }
 
-#my_modal3{
+#my_modal4{
   display: none;
 }
 /* モーダル */
-.my_modal_body3 {
+.my_modal_body4 {
   position: fixed;
   z-index: 100000;
   top: 400px;
@@ -28,12 +28,12 @@
   overflow-y: auto;
   width: 90%;
   max-height: 80%;
-  max-width: 850px;
+  max-width: 800px;
   border-radius: 20px;
   color: white;
 }
 /* チェック時オーバーレイとコンテンツを表示 */
-#my_modal3:checked ~ .my_modal_body3, #my_modal3:checked ~ .my_modal_overlay{
+#my_modal4:checked ~ .my_modal_body4, #my_modal4:checked ~ .my_modal_overlay{
   display: block;
 }
 
@@ -43,24 +43,23 @@
   font-size: 100px;
   transform: translate(-50%,-50%);
   color: #fff;
-  text-shadow: 0 0 20px #FFFF00;
+  text-shadow: 0 0 20px #5507FF;
   top: 700px;
   left: 50vw;
   border: 1px solid #fff;
-  padding-bottom: 15px;
+  border-radius: 30px;
   cursor: pointer;
   cursor: hand;
-  border-radius: 30px;
   padding: 0 10px 16px 10px;
 }
 
 .neon3::after {
-  content: attr(skill-text);
+  content: attr(Final-task-text);
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  color: #FFFF00;
+  color: #5507FF;
   filter: blur(15px);
 }
 
@@ -71,7 +70,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: #FFFF66;
+  background: #C299FF;
   z-index: -2;
   opacity: .5;
   filter: blur(40px);
@@ -79,6 +78,6 @@
 
 .neon3:hover {
   color: #fff;
-  background: #FFFF00;
-  box-shadow: 0 0 10px #FFFF00, 0 0 40px #FFFF00, 0 0 80px #FFFF00;
+  background: #5507FF;
+  box-shadow: 0 0 10px #5507FF, 0 0 40px #5507FF, 0 0 80px #5507FF;
 }
