--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -50,6 +50,7 @@
               <li>PASS：5151</li>
               <li>README：<%= link_to  "https://github.com/maki0sato/books-passage", "https://github.com/maki0sato/books-passage", target: :_blank, rel: "noopener noreferrer" %></li>
               <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
+              <li>[デプロイ]Heroku</li>
          </ul>
       </div>
     </div>
@@ -97,14 +98,14 @@
               <li></li>
               <%= link_to 'https://furima-36733.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'frmss.jpeg', size: '288x158', class: "ss"  %>
-              <% end %>
               <li>https://furima-36733.herokuapp.com/</li>
+              <% end %>
               <li>認証コード</li>
-              <li>admin</li>
-              <li>2222</li>
-              <li></li>
-              <li>GitHubUrl :https://github.com/maki0sato/furima-36733</li>
-              <li>[言語]Ruby, css, JavaScript</li>
+              <li>ID：admin</li>
+              <li>PASS：2222</li>
+              <li >GitHub：<%= link_to  "https://github.com/maki0sato/furima-36733", "https://github.com/maki0sato/furima-36733", target: :_blank, rel: "noopener noreferrer" %></li>
+              <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
+              <li>[デプロイ]Heroku</li>
          </ul>
       </div>
     </div>
@@ -132,15 +133,16 @@
               <li></li>
               <%= link_to 'http://18.181.136.74:', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'top-ss.png', size: '288x158', class: "ss"  %>
-              <% end %>
               <li>http://18.181.136.74:</li>
+              <% end %>
               <%= link_to 'http://18.181.136.74/profile/index2', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'ppagess.jpeg', size: '288x158', class: "ss"  %>
-              <% end %>
               <li>http://18.181.136.74/profile/index2</li>
+              <% end %>
               <li></li>
               <li>GitHubUrl :https://github.com/maki0sato/p-page</li>
-              <li>[言語]Ruby, css, JavaScript</li>
+              <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
+              <li>[デプロイ]AWS</li>
          </ul>
       </div>
     </div>
