--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -132,17 +132,22 @@
   </div>
 
   <div class="p-page-btn" id="btn">
-    <label for="my_modal7" class="neon7" p-page-text="p-page">p-page</label><!-- チェックボックスラベル -->
+    <label for="my_modal7" class="neon7" p-page-text="Other">Other</label><!-- チェックボックスラベル -->
     <input type="checkbox" id="my_modal7"><!-- 非表示チェックボックス -->
     <label class="my_modal_overlay" for="my_modal7"></label><!-- オーバーレイ -->
     <div class="my_modal_body7">
       <div class="my_modal_header">
-          p-page
+          Other
       </div>
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              
+              <li>誕生日：1994.04.13</li>
+              <li>血液型：O型</li>
+              <li>出身：東京</li>
+              <li>趣味：散歩、ゲーム、漫画、読書、音楽鑑賞</li>
+              <li>好きな食べ物：ベーコンエピ、焼き椎茸、串揚げ紅生姜</li>
+              <li>プログラミング：2021.08.09~</li>
          </ul>
       </div>
     </div>
