--- a/app/assets/stylesheets/light.css
+++ b/app/assets/stylesheets/light.css
@@ -4,7 +4,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: -10px;
+  top: -1510px;
   left: -10px;
 }
 
@@ -14,7 +14,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 100px;
+  top: -1400px;
   left: 40px;
 }
 
@@ -24,7 +24,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 120px;
+  top: -1380px;
   left: 60px;
 }
 
@@ -34,7 +34,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 100px;
+  top: -1400px;
   left: 200px;
 }
 
@@ -44,7 +44,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 150px;
+  top: -1350px;
   left: 250px;
 }
 
@@ -54,7 +54,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 130px;
+  top: -1370px;
   left: 400px;
 }
 
@@ -64,7 +64,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: -20px;
+  top: -1520px;
   left: 300px;
 }
 
@@ -74,7 +74,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 555px;
+  top: -945px;
   left: 30px;
 }
 
@@ -84,7 +84,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 345px;
+  top: -1155px;
   left: 30px;
 }
 
@@ -94,7 +94,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 450px;
+  top: -1050px;
   left: 30px;
 }
 
@@ -104,7 +104,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 450px;
+  top: -1050px;
   left: 135px;
 }
 
@@ -114,7 +114,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 450px;
+  top: -1050px;
   left: 240px;
 }
 
@@ -124,7 +124,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 555px;
+  top: -945px;
   left: 240px;
 }
 
@@ -134,7 +134,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 555px;
+  top: -945px;
   left: 345px;
 }
 
@@ -144,7 +144,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 660px;
+  top: -840px;
   left: 345px;
 }
 
@@ -154,7 +154,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 660px;
+  top: -840px;
   left: 450px;
 }
 
@@ -164,7 +164,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 660px;
+  top: -840px;
   left: 30px;
 }
 
@@ -174,7 +174,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 660px;
+  top: -840px;
   left: 135px;
 }
 
@@ -184,7 +184,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 660px;
+  top: -840px;
   left: 240px;
 }
 
@@ -194,7 +194,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 555px;
+  top: -945px;
   left: 135px;
 }
 
@@ -204,7 +204,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 600px;
+  top: -900px;
   left: 900px;
 	transform: rotate(15deg)
 }
@@ -215,7 +215,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 630px;
+  top: -870px;
   left: 1030px;
 	transform: rotate(30deg)
 }
@@ -226,7 +226,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 680px;
+  top: -820px;
   left: 1160px;
 	transform: rotate(45deg)
 }
@@ -237,7 +237,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 600px;
+  top: -900px;
   left: 1290px;
 	transform: rotate(75deg)
 }
@@ -248,7 +248,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 750px;
+  top: -750px;
   left: 1290px;
 	transform: rotate(95deg)
 }
@@ -259,7 +259,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 750px;
+  top: -750px;
   left: 850px;
 	transform: rotate(50deg)
 }
@@ -270,7 +270,7 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 720px;
+  top: -780px;
   left: 1000px;
 	transform: rotate(70deg)
 }
@@ -283,7 +283,7 @@
   text-align: center;
 	animation: rotation 2s linear infinite;
 	animation-delay: 0.5s;
-  top: 20px;
+  top: -1480px;
   left: 1000px;
 }
 
@@ -295,7 +295,7 @@
   text-align: center;
 	animation: rotation 2s linear infinite;
 	animation-delay: 1s;
-  top: 20px;
+  top: -1480px;
   left: 1105px;
 }
 
@@ -307,7 +307,7 @@
   text-align: center;
 	animation: rotation 2s linear infinite;
 	animation-delay: 1.5s;
-  top: 20px;
+  top: -1480px;
   left: 1210px;
 }
 
@@ -319,7 +319,7 @@
   text-align: center;
 	animation: rotation 2s linear infinite;
 	animation-delay: 2s;
-  top: 20px;
+  top: -1480px;
   left: 1315px;
 }
 
@@ -332,7 +332,7 @@
   text-align: center;
 	animation: rotation 2s linear infinite;
 	animation-delay: 2s;
-  top: 125px;
+  top: -1375px;
   left: 1315px;
 }
 
@@ -342,9 +342,21 @@
 	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
   position: absolute;
   text-align: center;
-  top: 450px;
+  top: -1050px;
   left: 1390px;
 	transform: rotate(95deg)
+}
+
+.container34 {
+	height: 100px;
+	width: 100px;
+	clip-path: polygon(0% 0%, 0% 100%, 2% 100%, 2% 2%, 98% 2%, 98% 98%, 2% 98%, 2% 100%, 100% 100%, 100% 0%);
+  position: absolute;
+  text-align: center;
+	animation: rotation 2s linear infinite;
+	animation-delay: 1.5s;
+  top: -1375px;
+  left: 1210px;
 }
 
 @keyframes rotation{
@@ -370,4 +382,21 @@
 	{
 		filter: hue-rotate(360deg);
 	}
+}
+
+.lights {
+  animation: slideIn 1s cubic-bezier(0.25, 1, 0.5, 1) 1 forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-180px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+  }
+  40%,100% {
+    opacity: 1;
+  }
 }
