--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -20,9 +20,10 @@
               <li></li>
               <li>＜プログラミング＞</li>
               <li>バレエを辞めることを決意し、学歴のない私ができる仕事を探しているとプログラマー、エンジニアの求人を多く見つけました。「ITって、聞いた事あるけど具体的になんなんだ？」と思い調べてみると「え？、Googleもソフトバンクも任天堂もIT企業なの！？」、ITと認識していなかった有名企業が多く、その多様性に驚き魅了されました。</li>
-              <li>完全未経験でも歓迎するという求人でしたが、やるなら少しは学んでからにしようとテックキャンプに入学しました。</li>
+              <li>完全未経験でも歓迎するという求人でしたが、やるなら少しは学んでからにしようとプログラミングスクールに通うとを決めました。</li>
               <li>私は座って作業することに慣れることから始まったので、正直大変でした。でも少しずつプログラミングを楽しむことができるようになってきました。初めて扱う技術がうまくいったり、エラー解決ができた時は、今までに無い快感を感じるようになりました。</li>
               <li>まだまだ、使用できる言語は少ないですが、これからどんどん学んでいきます。</li>
+              <li>今はJavaScriptの復習とSass/SCSSを勉強しています。</li>
          </ul>
       </div>
     </div>
@@ -49,7 +50,7 @@
               <li>ID：ichiro</li>
               <li>PASS：5151</li>
               <li>README：<%= link_to  "https://github.com/maki0sato/books-passage", "https://github.com/maki0sato/books-passage", target: :_blank, rel: "noopener noreferrer" %></li>
-              <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
+              <li>[開発環境]Ruby/Ruby on Rails/JavaScript/MySQL/Github/AWS/Visual Studio Code</li>
               <li>[デプロイ]Heroku</li>
               <div class=line></div>
               <li>p-page</li>
@@ -65,11 +66,11 @@
               <li>http://18.181.136.74:</li>
               <% end %>
               <%= link_to 'http://18.181.136.74/profile/index2', target: :_blank, rel: "noopener noreferrer" do %>
-                <%= image_tag 'ppage.jpeg', size: '288x158', class: "ss"  %>
+                <%= image_tag 'ppagess.jpeg', size: '288x158', class: "ss"  %>
               <li>http://18.181.136.74/profile/index2</li>
               <% end %>
               <li >GitHub：<%= link_to  "https://github.com/maki0sato/furima-36733", "https://github.com/maki0sato/p-page", target: :_blank, rel: "noopener noreferrer" %></li>
-              <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
+              <li>[開発環境]Ruby/Ruby on Rails/JavaScript/MySQL/Github/AWS/Visual Studio Code</li>
               <li>[デプロイ]AWS</li>
          </ul>
       </div>
@@ -93,29 +94,27 @@
               <li>JavaScript</li>
               <li>MySQL</li>
               <li>AWS</li>
+              <li></li>
+              <li>-勉強中-</li>
+              <li>Sass/SCSS</li>
+              <li>JavaScript</li>
          </ul>
       </div>
     </div>
   </div>
 
   <div class="Final-task-btn">
-    <label for="my_modal4" class="neon4" Final-task-text="final_task">final_task</label><!-- チェックボックスラベル -->
+    <label for="my_modal4" class="neon4" Final-task-text="copy_sight">copy_sight</label><!-- チェックボックスラベル -->
     <input type="checkbox" id="my_modal4"><!-- 非表示チェックボックス -->
     <label class="my_modal_overlay" for="my_modal4"></label><!-- オーバーレイ -->
     <div class="my_modal_body4">
       <div class="my_modal_header">
-          最終課題
+          copy_sight
       </div>
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>テックキャンプの最終課題で作成したフリーマーケットのアプリケーションです。</li>
-              <li></li>
-              <li>搭載されている機能は</li>
-              <li>・ユーザー管理機能・商品出品機能・商品一覧表示機能・商品詳細表示機能</li>
-              <li>・商品情報編集機能・商品削除機能・商品購入機能・Basic認証</li>
-              <li>などがあります。また、S3の導入もしています。</li>
-              <li></li>
+              <li>テックキャンプの最終課題で作成したフリーマーケットアプリケーションのコピーサイトです。</li>
               <%= link_to 'https://furima-36733.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'frmss.jpeg', size: '288x158', class: "ss"  %>
               <li>https://furima-36733.herokuapp.com/</li>
@@ -124,7 +123,8 @@
               <li>ID：admin</li>
               <li>PASS：2222</li>
               <li >GitHub：<%= link_to  "https://github.com/maki0sato/furima-36733", "https://github.com/maki0sato/furima-36733", target: :_blank, rel: "noopener noreferrer" %></li>
-              <li>[開発環境]Ruby/Ruby on Rails/MySQL/Github/AWS/Visual Studio Code</li>
+              <li >最終課題説明文：<%= link_to  "https://docs.google.com/document/d/1M3SJzI7R06brU9Xw48FKcHDn6QYByXVJbFt9MdF93dE/edit", "https://docs.google.com/document/d/1M3SJzI7R06brU9Xw48FKcHDn6QYByXVJbFt9MdF93dE/edit", target: :_blank, rel: "noopener noreferrer" %></li>
+              <li>[開発環境]Ruby/Ruby on Rails/JavaScript/MySQL/Github/AWS/Visual Studio Code</li>
               <li>[デプロイ]Heroku</li>
          </ul>
       </div>
