--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -14,7 +14,7 @@
               <li></li>
               <li>＜経歴＞</li>
               <li>私は高校を卒業後、バレエダンサーとして活動してきました。</li>
-              <li>バレエ団というプロの団体に所属し、2年間の見習いを経て20歳の時、正団員。プロのバレエダンサーになることができました。</li>
+              <li>バレエ団というプロの団体に所属し、2年間の見習いを経て20歳の時、正団員、プロのバレエダンサーになることができました。</li>
               <li>ダンサーになってからは、毎日が目まぐるしく過ぎて行き、気がつくとバレエ団に入って8年が立っていました。</li>
               <li>そんな時、久しぶりに地元の友人に会う機会がありました。成人式以来に会う友人たちは大学を卒業し会社に勤めていました。そんな友人たちが逞しく大人びて見え、バレエで限界を感じていた中、バレエ界以外の世界を経験したいという思いが出てきました。</li>
               <li></li>
@@ -23,7 +23,7 @@
               <li>完全未経験でも歓迎するという求人でしたが、やるなら少しは学んでからにしようとプログラミングスクールに通うとを決めました。</li>
               <li>私は座って作業することに慣れることから始まったので、正直大変でした。でも少しずつプログラミングを楽しむことができるようになってきました。初めて扱う技術がうまくいったり、エラー解決ができた時は、今までに無い快感を感じるようになりました。</li>
               <li>まだまだ、使用できる言語は少ないですが、これからどんどん学んでいきます。</li>
-              <li>今はJavaScriptの復習とSass/SCSSを勉強しています。</li>
+              <li>今はSass/SCSSやVue.jsを勉強しています。</li>
          </ul>
       </div>
     </div>
@@ -96,8 +96,10 @@
               <li>AWS</li>
               <li></li>
               <li>-勉強中-</li>
+              <li>HTML/CSS</li>
               <li>Sass/SCSS</li>
               <li>JavaScript</li>
+              <li>Vue.js</li>
          </ul>
       </div>
     </div>
