--- a/app/views/profile/index2.html.erb
+++ b/app/views/profile/index2.html.erb
@@ -116,7 +116,7 @@
       <div class="my_modal_content">
         <!-- モーダル内コンテンツ -->
           <ul>
-              <li>テックキャンプの最終課題で作成したフリーマーケットアプリケーションのコピーサイトです。</li>
+              <li>プログラミングスクールの課題で作成したフリーマーケットアプリケーションのコピーサイトです。</li>
               <%= link_to 'https://furima-36733.herokuapp.com/', target: :_blank, rel: "noopener noreferrer" do %>
                 <%= image_tag 'frmss.jpeg', size: '288x158', class: "ss"  %>
               <li>https://furima-36733.herokuapp.com/</li>
